# ChangeLog for x11-libs/wxGTK
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/wxGTK/ChangeLog,v 1.56 2004/07/22 17:57:05 pythonhead Exp $

  22 Jul 2004; Rob Cakebread <pythonhead@gentoo.org> wxGTK-2.4.0.ebuild:
  Changed all wxwindows to wxwidgets bug# 45061

  30 Jun 2004; Guy Martin <gmsoft@gentoo.org> wxGTK-2.4.2-r1.ebuild:
  Marked stable on hppa.

  28 Jun 2004; Aron Griffis <agriffis@gentoo.org> wxGTK-2.4.0.ebuild,
  wxGTK-2.4.2-r1.ebuild, wxGTK-2.4.2.ebuild, wxGTK-2.5.1.ebuild:
  econf || die, sync IUSE, glibc -> libc

  23 Jun 2004; Aron Griffis <agriffis@gentoo.org> wxGTK-2.4.0.ebuild,
  wxGTK-2.4.1-r1.ebuild, wxGTK-2.5.1.ebuild:
  QA - fix use invocation

*wxGTK-2.4.2-r1 (22 Jun 2004)

  22 Jun 2004; Rob Cakebread <pythonhead@gentoo.org> +wxGTK-2.4.2-r1.ebuild:
  Disable unicode for gtk. Closes bug# 52495

  22 Jun 2004; Rob Cakebread <pythonhead@gentoo.org> wxGTK-2.4.2.ebuild:
  Marked stable on x86

*wxGTK-2.5.1 (22 Jun 2004)

  22 Jun 2004; Rob Cakebread <pythonhead@gentoo.org> +wxGTK-2.5.1.ebuild:
  Version bump but added to package.mask. Bug# 44138. Thanks HopeSeekr
  <theodore@xmule.org>

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> wxGTK-2.4.0.ebuild,
  wxGTK-2.4.1-r1.ebuild, wxGTK-2.4.2.ebuild:
  Add die following econf for bug 48950

  17 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> wxGTK-2.4.1-r1.ebuild,
  wxGTK-2.4.2.ebuild:
  Inherit eutils, fixed IUSE flags.

  24 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> wxGTK-2.4.0.ebuild,
  wxGTK-2.4.1-r1.ebuild:
  don't use deprecated ? : use syntax

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> wxGTK-2.4.2.ebuild:
  stable on ia64

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> wxGTK-2.4.0.ebuild:
  add ~alpha for the sake of dev-python/wxPython-2.4.0.7

  17 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org> :
  manifest fix

  16 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org> wxGTK-2.4.2.ebuild:
  set ppc in keywords
